--- a/index.html
+++ b/index.html
@@ -57,25 +57,26 @@ machine learning platforms.
 
 <p>
 Dev is a Software Engineer at
-<a class="red_glow" href="https://www.google.com">Google,</a>
+<a target="_blank" class="red_glow" href="https://www.google.com">Google,</a>
 based out of Mountain View, California. He works on system scalability and
 performance tuning for Google Shopping Ads serving infrastructure.
 
 He earned his MS degree in Computer Science in 2015 from the
-<a class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
-<a class="red_glow" href="{{ site.ucsb_url }}">University of California,
+<a target="_blank" class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
+<a target="_blank" class="red_glow" href="{{ site.ucsb_url }}">University of California,
 Santa Barbara.</a>
 
 At UC Santa Barbara, he worked at the
-<a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>
+<a target="_blank" class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>
 advised by
-<a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
-and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
-on StochSS.
+<a target="_blank" class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
+and
+<a target="_blank" class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
+on StochSS (Stochastic Simulation as a Service).
 </p>
 
 <p>
-<a class="red_glow" href="https://www.stochss.org">StochSS</a>
+<a target="_blank" class="red_glow" href="http://www.stochss.org">StochSS</a>
 is a NIH funded project whose aim is to provide an integrated
 development environment (IDE) for running discrete stochastic simulations of
 biochemical networks and population systems in cloud computing environments.
@@ -87,16 +88,16 @@ a web service.
 
 <p>
 Dev also has been a software engineering intern
-<a class="red_glow" href="https://www.appfolio.com">AppFolio</a>, a SaaS
-startup, focused on property management vertical.
-At Appfolio, he worked on property rental price prediction as a member of their
-data analytics team.
+<a target="_blank" class="red_glow" href="https://www.appfolio.com">AppFolio</a>, a SaaS
+startup, focused on property management vertical. At Appfolio, he worked on
+property rental price prediction as a member of their data analytics team.
 </p>
 
 <p>
-Prior to Google and UCSB, he worked at McAfee on enterprise data protection
-products, which included transparent enforceable encryption of files
-and removable media.
+Prior to Google and UCSB, he worked at
+<a target="_blank" class="red_glow" href="https://www.mcafee.com">McAfee</a>
+on enterprise data protection products, which included transparent enforceable
+encryption of files and removable media.
 </p>
 
 </article>
