--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ a web service.
 </p>
 
 <p>
-Dev also has been a software engineering intern
-<a target="_blank" class="red_glow" href="https://www.appfolio.com">AppFolio</a>, a SaaS
-startup, focused on property management vertical. At Appfolio, he worked on
-property rental price prediction as a member of their data analytics team.
+Dev also has been a software engineering intern at
+<a target="_blank" class="red_glow" href="https://www.appfolio.com">AppFolio Inc.</a>,
+a SaaS startup, focused on property management vertical. At Appfolio, he worked
+on property rental price prediction as a member of their data analytics team.
 </p>
 
 <p>
