--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a web service.
 
 <p>
 Dev also has been a software engineering intern at
-<a target="_blank" class="red_glow" href="https://www.appfolio.com">AppFolio Inc.</a>,
+<a target="_blank" class="red_glow" href="https://www.appfolio.com">AppFolio</a>,
 a SaaS startup, focused on property management vertical. At Appfolio, he worked
 on property rental price prediction as a member of their data analytics team.
 </p>
