--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 title:  Homepage
 description:  >
-  Personal Website of Dev Nath - Coder at-large.
-  Software Craftsmith at Google by day, brooding painter by night.
-  Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost).
-  Occasional Fauxtographer, with a pretty bad case of Epicurea.
+  Personal Website of Dev Nath, Software Craftsmith, current working at
+  Google on shopping serving infrastructure, serving organic results
+  as well as ads on google.com for shopping vertical.
+
 keywords: >
   dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,cloud,
   santa barbara,google,google shopping
@@ -48,7 +48,7 @@ keywords: >
 
 <p>
 Hi, I'm <strong>Dev</strong>. I work at Google. My areas of interest include
-distributed system infrastructure, performance tuning and large-scale
+distributed system infrastructure, performance optimization and large-scale
 machine learning platforms.
 
 </p>
