--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ machine learning platforms.
 <h3>Bio</h3>
 
 <p>
-Dev is a Software Engineer at
+<i>Dev</i> is a Software Engineer at
 <a target="_blank" class="red_glow" href="https://www.google.com">Google,</a>
 based out of Mountain View, California. He works on system scalability and
-performance tuning for Google Shopping Ads serving infrastructure.
+performance tuning for Google Shopping serving infrastructure.
 
 He earned his MS degree in Computer Science in 2015 from the
 <a target="_blank" class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
