--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ on StochSS (Stochastic Simulation as a Service).
 
 <p>
 <a target="_blank" class="red_glow" href="http://www.stochss.org">StochSS</a>
-is a NIH funded project whose aim is to provide an integrated
+was a NIH funded project whose aim is to provide an integrated
 development environment (IDE) for running discrete stochastic simulations of
 biochemical networks and population systems in cloud computing environments.
 Dev's contribution was a generic cloud computing framework
