--- a/index.html
+++ b/index.html
@@ -59,48 +59,38 @@
       <img alt="Dev Nath" src="img/devnath_logo.png" gumby-retina="">
       </a>
     </h1>
-    <ul class="eight columns main-nav">
-      <li class="pull_right padding_left_20">
-        <p class="medium pretty default btn icon-github icon-left">
-          <a target="_blank" href="https://github.com/dnath">GitHub</a>
-        </p>
-      </li>
-    </ul>
   </div>
   </div>
 </div>
 
-<!--social-->
-<div class="wrapper shaded">
-<div class="row">
-  <div class="metro btn default rounded pull_left">
-    <a href="files/resume_dev_nath.pdf">Resume <i class="icon-download"></i></a>
-  </div>
-  <div class="metro btn linkedin pull_right">
-    <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
-      <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
-    </a>
-  </div>
-  <div class="metro btn twitter pull_right">
-    <a target="_blank" href="https://twitter.com/devnath_2">
-      <i class="social icon-twitter"></i>
-      <span class="hide">Twitter | Dev Nath : @devnath_2</span>
-    </a>
-  </div>
-</div>
-</div>
 
 <div class="row padding_top_20">
 </div>
 
+<table>
+<tr>
+<td>
+
 <div class="row">
 
 <div class="four columns">
-  <div class="image rounded">
-  <img src="img/devnath.jpg" alt="Dev Nath"/>
+  <div>
+  <img src="img/devnath.jpg" style="max-width:200px;" alt="Dev Nath"/>
   </div>
   <span>
     <i class="icon-mail"></i> dev . nath . cs {at} gmail . com
+  </span>
+  <br />
+  <span>
+    <a target="_blank" class="gray_link" href="https://github.com/dnath">
+      <i class="icon-github"></i> Github
+    </a>
+  </span>
+  <br />
+  <span>
+    <a target="_blank" class="gray_link" href="https://www.linkedin.com/in/dev-nath">
+      <i class="icon-linkedin"></i> Linkedin
+    </a>
   </span>
   <br />
   <span>
@@ -108,7 +98,20 @@
       <i class="icon-graduation-cap"></i> Google Scholar
     </a>
   </span>
+  <br />
+  <span>
+    <a target="_blank" class="gray_link" href="https://twitter.com/devnath_2">
+      <i class="icon-linkedin"></i> Twitter
+    </a>
+  </span>
+  <div class="metro btn default rounded pull_left">
+    <a href="files/resume_dev_nath.pdf">Resume <i class="icon-download"></i></a>
+  </div>
 </div>
+
+</td>
+
+<td>
 
 <div class="eight columns">
 <article class="padding_bottom_20">
@@ -170,6 +173,10 @@ encryption of files and removable media.
 
 </article>
 </div>
+
+</td>
+</tr>
+</table>
 
 <div class="row">
 <div class="four columns"></div>
