--- a/index.html
+++ b/index.html
@@ -47,156 +47,80 @@
 
 <body>
 
-<div class="super_wrapper">
+<div class="">
 
-<!--navbar-->
-<div class="navcontain">
-  <div class="navbar" gumby-fixed="top" id="nav1">
-  <div class="row">
-    <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
-    <h1 class="four columns logo">
-      <a href="{{ site.url }}">
-      <img alt="Dev Nath" src="img/devnath_logo.png" gumby-retina="">
-      </a>
-    </h1>
-  </div>
-  </div>
-</div>
-
-
-<div class="row padding_top_20">
-</div>
-
-<table>
-<tr>
-<td>
-
-<div class="row">
-
-<div class="four columns">
-  <div>
-  <img src="img/devnath.jpg" style="max-width:200px;" alt="Dev Nath"/>
-  </div>
-  <span>
-    <i class="icon-mail"></i> dev . nath . cs {at} gmail . com
-  </span>
-  <br />
-  <span>
-    <a target="_blank" class="gray_link" href="https://github.com/dnath">
-      <i class="icon-github"></i> Github
-    </a>
-  </span>
-  <br />
-  <span>
-    <a target="_blank" class="gray_link" href="https://www.linkedin.com/in/dev-nath">
-      <i class="icon-linkedin"></i> Linkedin
-    </a>
-  </span>
-  <br />
-  <span>
-    <a target="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
-      <i class="icon-graduation-cap"></i> Google Scholar
-    </a>
-  </span>
-  <br />
-  <span>
-    <a target="_blank" class="gray_link" href="https://twitter.com/devnath_2">
-      <i class="icon-linkedin"></i> Twitter
-    </a>
-  </span>
-  <div class="metro btn default rounded pull_left">
-    <a href="files/resume_dev_nath.pdf">Resume <i class="icon-download"></i></a>
-  </div>
-</div>
-
-</td>
-
-<td>
-
-<div class="eight columns">
-<article class="padding_bottom_20">
+<div class="">
+<article class="">
 <h2>Hello, World !</h2>
 
 <p>
-Hi, I'm <strong>Dev</strong>. I work at Google. My areas of interest include
-distributed system infrastructure, performance optimization and large-scale
-machine learning platforms.
+Hi, I'm <strong>Dev</strong>. I'm a Staff Software Engineer at <a target="_blank" href="https://www.google.com">Google</a>, with a deep background in designing and scaling low latency high throughput web services.  
 
 </p>
 
-<h3>Bio</h3>
+<h3>Short Bio</h3>
 
 <p>
-<i>Dev</i> is a Software Engineer at
-<a target="_blank" class="red_glow" href="https://www.google.com">Google,</a>
-based out of Mountain View, California. He works on system scalability and
-performance tuning for Google Shopping serving infrastructure.
+I lead and manage an engineering team at the Google HQ office in Mountain View, CA. My team is responsible for designing and scaling ads serving infrastructure for Google Shopping Ads, better known as Product Listing Ads (PLAs).
+</p>
 
-He earned his MS degree in Computer Science in 2015 from the
-<a target="_blank" class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
-<a target="_blank" class="red_glow" href="{{ site.ucsb_url }}">University of California,
-Santa Barbara.</a>
-
-At UC Santa Barbara, he worked at the
-<a target="_blank" class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>
-advised by
-<a target="_blank" class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
+<p>
+Before Google, I went to grad school at <a target="_blank" href="https://www.ucsb.edu/">University of California, Santa Barbara</a> to get a Masters in Computer Science.
+At UC Santa Barbara, I worked as a Research Assistant on <a target="_blank" class="red_glow" href="http://www.stochss.org">StochSS</a>  at the
+<a target="_blank" href="https://sites.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>
+under my advisors
+<a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
 and
-<a target="_blank" class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
-on StochSS (Stochastic Simulation as a Service).
+<a target="_blank" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
+
+<p>
+While at UCSB, I was also a software engineering summer intern at
+<a target="_blank" href="https://www.appfolio.com">AppFolio</a>,
+working on property rental price prediction as a member of their data analytics team.
 </p>
 
 <p>
-<a target="_blank" class="red_glow" href="http://www.stochss.org">StochSS</a>
-was a NIH funded project whose aim is to provide an integrated
-development environment (IDE) for running discrete stochastic simulations of
-biochemical networks and population systems in cloud computing environments.
-Dev's contribution was a generic cloud computing framework
-for configuring virtual machines and deploying arbitrary scientific simulation
-programs in the cloud (public or private) by wrapping the source code as
-a web service.
+Prior to Google and UCSB, I worked at
+<a target="_blank" href="https://www.mcafee.com">McAfee</a>
+in Bangalore, India on enterprise data protection products.
 </p>
 
 <p>
-Dev also has been a software engineering intern at
-<a target="_blank" class="red_glow" href="https://www.appfolio.com">AppFolio</a>,
-a SaaS startup, focused on property management vertical. At Appfolio, he worked
-on property rental price prediction as a member of their data analytics team.
+For more, please refer my <a href="files/resume_dev_nath.pdf">resume</a>.
 </p>
 
-<p>
-Prior to Google and UCSB, he worked at
-<a target="_blank" class="red_glow" href="https://www.mcafee.com">McAfee</a>
-on enterprise data protection products, which included transparent enforceable
-encryption of files and removable media.
-</p>
+<h3>Find me online</h3>
+<ul>
+<li>
+  Email: <i class="icon-mail"></i> dev . nath . cs {at} gmail . com
+</li>
+<li>
+  <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
+    <i class="icon-linkedin"></i> Linkedin
+  </a>
+</li>
+<li>
+  <a target="_blank" href="https://github.com/dnath">
+    <i class="icon-github"></i> Github
+  </a>
+</li>
+<li>
+  <a target="_blank" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
+    <i class="icon-graduation-cap"></i> Google Scholar
+  </a>
+</li>
+<!-- <li>
+  <a target="_blank" href="https://twitter.com/devnath_2">
+    <i class="icon-linkedin"></i> Twitter
+  </a>
+</li> -->
+</ul>
 
 </article>
 </div>
 
-</td>
-</tr>
-</table>
-
-<div class="row">
-<div class="four columns"></div>
-<div class="eight columns padding_left_20 padding_top_20">
-  <div class="five columns image text_center">
-    <a target="_blank" href="{{ site.ucsb_url }}">
-      <img src="img/ucsbwave-blue.png" alt="University of California, Santa Barbara">
-    </a>
-  </div>
-  <div class="two columns image text_center">
-    <a target="_blank" href="{{ site.ucsb_cs_url }}">
-      <img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science">
-    </a>
-  </div>
-  <div class="three columns image text_center">
-    <a target="_blank" href="{{ site.ucsb_racelab_url }}">
-      <img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara">
-    </a>
-  </div>
-</div>
+<div>
+  <img src="img/devnath.jpg" class="img-me" alt="Dev Nath"/>
 </div>
 
 </div>
