--- a/index.html
+++ b/index.html
@@ -47,21 +47,19 @@
 
 <body>
 
-<div class="">
-
-<div class="">
-<article class="">
+<div class="info">
+<article class="article-info">
 <h2>Hello, World !</h2>
 
 <p>
-Hi, I'm <strong>Dev</strong>. I'm a Staff Software Engineer at <a target="_blank" href="https://www.google.com">Google</a>, with a deep background in designing and scaling low latency high throughput web services.  
+Hi, I'm <b><i>Dev</i></b>. I'm a Staff Software Engineer at <a target="_blank" href="https://www.google.com">Google</a>, with a deep background in designing and scaling low latency high throughput web services.  
 
 </p>
 
 <h3>Short Bio</h3>
 
 <p>
-I lead and manage an engineering team at the Google HQ office in Mountain View, CA. My team is responsible for designing and scaling ads serving infrastructure for Google Shopping Ads, better known as Product Listing Ads (PLAs).
+I lead and manage an engineering team at the Google HQ office in Mountain View, CA. My team is responsible for designing and scaling ads serving infrastructure for <a target="_blank" href="https://ads.google.com/home/campaigns/shopping-ads/">Google Shopping Ads</a>, better known as Product Listing Ads (PLAs).
 </p>
 
 <p>
@@ -86,45 +84,41 @@ in Bangalore, India on enterprise data protection products.
 </p>
 
 <p>
-For more, please refer my <a href="files/resume_dev_nath.pdf">resume</a>.
+Please refer to my <a href="files/resume_dev_nath.pdf">resume</a> for more details.
 </p>
 
-<h3>Find me online</h3>
+<h3>Find me online at:</h3>
 <ul>
 <li>
-  Email: <i class="icon-mail"></i> dev . nath . cs {at} gmail . com
+    <i>Email:</i>
+    dev . nath . cs [<i> at </i>} gmail . com
 </li>
 <li>
-  <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
-    <i class="icon-linkedin"></i> Linkedin
-  </a>
+    <i>LinkedIn:</i> 
+    <a target="_blank" href="https://www.linkedin.com/in/dev-nath">dev-nath</a>
 </li>
-<li>
-  <a target="_blank" href="https://github.com/dnath">
-    <i class="icon-github"></i> Github
+<!-- <li>
+  <i>Twitter:</i> 
+  <a target="_blank" href="https://twitter.com/devnath_2">
+    @devnath_2
   </a>
+</li> -->
+<li>
+    <i>Github:</i>
+    <a target="_blank" href="https://github.com/dnath">@dnath</a>
 </li>
 <li>
   <a target="_blank" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
-    <i class="icon-graduation-cap"></i> Google Scholar
+  Google Scholar
   </a>
 </li>
-<!-- <li>
-  <a target="_blank" href="https://twitter.com/devnath_2">
-    <i class="icon-linkedin"></i> Twitter
-  </a>
-</li> -->
 </ul>
 
 </article>
-</div>
 
-<div>
-  <img src="img/devnath.jpg" class="img-me" alt="Dev Nath"/>
-</div>
+<img src="img/devnath.jpg" class="img-me" alt="Dev Nath"/>
 
 </div>
-
 
 </body>
 </html>
