Update stochss link.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ I lead and manage an engineering team at the Google HQ office in Mountain View, 
 
 <p>
 Before Google, I went to grad school at <a target="_blank" href="https://www.ucsb.edu/">University of California, Santa Barbara</a> to get a Masters in Computer Science.
-At UC Santa Barbara, I worked as a Research Assistant on <a target="_blank" class="red_glow" href="http://www.stochss.org">StochSS</a>  at the
+At UC Santa Barbara, I worked as a Research Assistant on <a target="_blank" class="red_glow" href="https://live.stochss.org/">StochSS</a>  at the
 <a target="_blank" href="https://sites.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>
 under my advisors
 <a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
