--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ Hi, I'm <b><i>Dev</i></b>. I'm a Staff Software Engineer at <a target="_blank" h
 <h3>Short Bio</h3>
 
 <p>
-I lead and manage an engineering team at the Google HQ office in Mountain View, CA. My team is responsible for designing and scaling API infrastructure for serving Google Gemini LLMs, as part of <a target="https://cloud.google.com/vertex-ai">Google Cloud Vertex AI</a> offering.
+I lead and manage an engineering team at the Google HQ office in Mountain View, CA. My team is responsible for designing and scaling API infrastructure for serving <a target="_blank" href="https://cloud.google.com/vertex-ai/generative-ai/docs/learn/models">Google Gemini family of LLMs</a>, as part of <a target="_blank" href="https://cloud.google.com/vertex-ai">Google Cloud Vertex AI</a> offering.
+</p>
+
+<p>
 Previously, I used to lead a team on ads serving infrastructure for <a target="_blank" href="https://ads.google.com/home/campaigns/shopping-ads/">Google Shopping Ads</a>, better known as Product Listing Ads (PLAs).
 </p>
 
