Add copyright footer.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@ Please refer to my <a href="files/resume_dev_nath.pdf">resume</a> for more detai
 
 <img src="img/devnath.jpg" class="img-me" alt="Dev Nath"/>
 
+<footer class="site-footer">© <span id="copyright-year"></span> Dibyendu Nath. All rights reserved.</footer>
+
 </div>
+
+<script>
+  document.getElementById('copyright-year').textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
