--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Hi, I'm <b><i>Dev</i></b>. I'm a Staff Software Engineer at <a target="_blank" h
 <h3>Short Bio</h3>
 
 <p>
-I lead and manage an engineering team at the Google HQ office in Mountain View, CA. My team is responsible for designing and scaling API infrastructure for serving <a target="_blank" href="https://cloud.google.com/vertex-ai/generative-ai/docs/learn/models">Google Gemini family of LLMs</a>, as part of <a target="_blank" href="https://cloud.google.com/vertex-ai">Google Cloud Vertex AI</a> offering.
+I lead and manage an engineering team at the Google, Sunnyvale, CA. My team is responsible for designing and scaling infrastructure for serving <a target="_blank" href="https://cloud.google.com/vertex-ai/generative-ai/docs/learn/models">Google Gemini family of LLMs</a>, as part of <a target="_blank" href="https://cloud.google.com/vertex-ai">Google Cloud Vertex AI</a> platform.
 </p>
 
 <p>
@@ -79,12 +79,6 @@ and
 While at UCSB, I was also a software engineering summer intern at
 <a target="_blank" href="https://www.appfolio.com">AppFolio</a>,
 working on property rental price prediction as a member of their data analytics team.
-</p>
-
-<p>
-Prior to Google and UCSB, I worked at
-<a target="_blank" href="https://www.mcafee.com">McAfee</a>
-in Bangalore, India on enterprise data protection products.
 </p>
 
 <p>
