--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Please refer to my <a href="files/resume_dev_nath.pdf">resume</a> for more detai
 
 <img src="img/devnath.jpg" class="img-me" alt="Dev Nath"/>
 
-<footer class="site-footer">© <span id="copyright-year"></span> Dibyendu Nath. All rights reserved.</footer>
+<footer class="site-footer">© <span id="copyright-year"></span> Dev Nath. All rights reserved.</footer>
 
 </div>
 
